libavg 1.7.0.pre1 - Oct 29, 2011

  svn revision 6871

  Major New Features:
    * Expanded effects support: New HueSatFXNode and InvertFXNode by Richard Klemm, major
      speed improvements.
    * Polished multitouch gesture support.
    * New Contact class that delivers per-touch data, per-touch callbacks that make
      event handling a lot easier.
    * SVG support.
    * New BitmapManager that allows loading of bitmaps in a background thread (OXullo
      Intersecans).

  Other Changes:
    * Lots of performance optimizations.
    * Linux ATI graphics are supported now.
    * Major speed improvements to VideoWriter. Saving full HD videos is not a problem
      anymore and costs little performance for the main rendering thread.
    * Callbacks don't hold references to python objects anymore - this should make
      freeing nodes a lot easier.
    * New StateMachine class.
    * Added Player.getPixelsPerMM(), getPhysicalScreenDimensions(), assumePixelsPerMM()
    * Added touch feedback class.

libavg 1.6.0 - May 29, 2011

  svn revision 6022, branch release1.6.x

  Bugfix release

libavg 1.6.0.pre2 - May 27, 2011

  svn revision 6018, branch release1.6.x

  Bugfix release

libavg 1.6.0.pre1 - May 20, 2011

  svn revision 5974

  Major New Features:
    * New Sphinx-based reference.
    * Unified multitouch interface: internal tracker can now be activated using 
      enableMultitouch(), Windows 7 touch is supported, linux multitouch using
      XInput 2.1 and LibMTDev. Drivers are autodetected if possible.
    * (Finally!) Added clean windows build files for VS 2010 to the open source 
      distribution.

  Other Changes:
    * (Finally!) Found an invisible workaround for the Linux/Mesa graphics segfault
      that's been plaguing us for years (Chase Douglas).
    * Support for input devices defined in python (Henrik Thoms).
    * Added VideoWriter class (initial version by Henrik Thoms).
    * Added initial manipulation classes for multitouch gesture support.